--- a/src/scss/scss/custom.scss
+++ b/src/scss/scss/custom.scss
@@ -1,7 +1,7 @@
 // --------- VARIÁVEIS ---------
 $primary: #7c3aed;
 $secondary: #4b0082;
-$light: #c084fc;
+$light: #f2e5ff!important;
 $body-bg: #121212;
 $body-color: #ffffff;
 $font-family-sans-serif: "Georgia", "Inter", sans-serif;
